# jose

./: .gitignore  HISTORY  Info.plist  JDBC-Test.lnk  README.md  RELEASE NOTES  TODO  build-minimal.xml  build.xml  download.xml  ghost-install-chessaid.xml  ghost-install.xml  info.txt  jose.bat  jose.desktop  jose.ini  jose.sh  pack.xml
3d/: fab100.j3df  fab50x.j3df  fau.j3df  flyby.j3ds  info.txt  std.j3df  std2.j3df
Contents/: Info.plist
bad fonts/: readme.txt
books/: info.txt
c/JavaLauncher/: CMakeLists.txt  JavaLauncher.dsp  JavaLauncher.dsw  JavaLauncher.ini  JavaLauncher.ncb  JavaLauncher.opt  JavaLauncher.plg  JavaLauncher.sln  JavaLauncher.vcproj  MANIFEST1_1.txt  jlaunch-unix.cpp  jlaunch-win.cpp  jlaunch.cpp  jlaunch.h  jose_original.rc  jvm.cpp  jvm.h  resource.h  resources.aps  resources.rc  resources.~c  strlist.cpp  strlist.h  util.cpp  util.h  winreg.cpp  winreg.h
config/: AnMon_521.xml  Aristarch.xml  ChestUCI.xml  Dragon_45.xml  EngineClassic.xml  Hermann.xml  Nejmet_307.xml  Rybka v1.0 Beta.w32.xml  ShredderClassicLinux.xml  SoS_Arena.xml  SoS_Arena[2].xml  Spike[2].xml  betsy651.xml  books.xml  crafty.xml  datasources-2.xml  datasources.xml  eco.properties  eco.properties.ca  eco.properties.de  eco.properties.es  eco.properties.fr  eco.properties.it  eco.properties.pt  eco.properties.sv  fonts.xml  frcbaron.xml  fruit.xml  gnuches5.xml  info.txt  jonny282.xml  lang.properties  lang.properties.ca  lang.properties.de  lang.properties.es  lang.properties.fr  lang.properties.hu  lang.properties.it  lang.properties.pl  lang.properties.pt  (+18 more)
database/: starter.pgn
doc/: Opening Book.doc  Printing.ppt  Schäfer-Gass.pgn  Var Promotion.drawio  annotations.html  annotations.pgn  create--toc.bat  create--toc.sh  docview.bat  info.txt
docs/: CNAME  License Certificate.txt  download.bat  download.xml  download.xsl  flight.csv  flyby0.html  flyby1.html  index.html  index_download.html  install.html  links.html  servlet.html  styles.css  top.html  top_forum.html  top_manual.html
eco/: Kopie von ecocodes9.txt  eco.key  eco.key.bak  eco_rebel.txt  ecocodes10.txt  ecocodes12.txt  ecocodes16.txt  ecocodes22.txt  ecocodes29.txt  ecocodes3.txt  ecocodes7.txt  ecocodes9.txt  filemap.properties  scid.eco
fonts/: info.txt
fop/: ARIAL.XML  ARIAL0.XML  BERLIN.XML  CASEFONT.XML  FIG-SB-2.XML  FIG-SN-2.XML  FIG-TB-2.XML  FIG-TN-2.XML  MERIFONT.XML  SpArFgRg.XML  arialbd.XML  (+3 more)
(+845 files in other folders)
